# band-std-reference-contracts-ink

./: Cargo.toml  README.md
contracts/std_ref/: Cargo.toml  constant.rs  lib.rs  ref_data.rs  reference_data.rs
contracts/std_ref/metadata/: standard_reference.json
data_sources/: binance.py  bittrex.py  coinbasepro.py  coingecko.py  coinmarketcap.py  cryptocompare.py  hitbtc.py  huobipro.py  kraken.py  okx.py
oracle_scripts/mainnet/: Cargo.toml
oracle_scripts/mainnet/src/: lib.rs
oracle_scripts/testnet/: Cargo.toml
oracle_scripts/testnet/src/: lib.rs
relayer/: Dockerfile  config.json.example  go.mod  go.sum
relayer/common/: config.go  result.go  sub.go  types.go  utils.go
relayer/substrate/: config.go  relayer.go
relayer/substrate/client/: base.go  client.go  contract.go  types.go
signer/: .env.example  .eslintrc.js  .prettierrc  Dockerfile  README.md  jest.config.ts  nest-cli.json  package.json  tsconfig.json
signer/config/: config_substrate.json.sample
signer/prisma/: schema.prisma
signer/src/: app.interceptor.ts  app.module.ts  main.ts
signer/src/shared/: logger.middleware.ts  price.ts
signer/src/shared/config/: config.ts
signer/src/shared/database/: database.module.ts  request.service.ts
signer/src/shared/interceptors/: loggerdb.interceptor.ts
signer/src/shared/wallet/: wallet.module.ts
signer/src/substrate/: sign.dto.ts  substrate.controller.spec.ts  substrate.controller.ts  substrate.module.ts  substrate.service.spec.ts  substrate.service.ts
signer/src/substrate/config/: substrate-config.type.ts  substrate.config.ts
(+3 files in other folders)
